scrollbar fix
+ add placeholder for instance name input

--- a/client/assets/styles/scss/components/tables.scss
+++ b/client/assets/styles/scss/components/tables.scss
@@ -108,5 +108,5 @@ table {
 
 .table-scroll {
   height: calc(100% - 54px);
-  overflow-y: scroll;
+  overflow-y: auto;
 }
